# trafficology

./: .gitignore  README.md  pyproject.toml
trafficology/: manage.py
trafficology/horoscope/: admin.py  models.py  urls.py  views.py
trafficology/horoscope/migrations/: 0001_initial.py  0002_rename_junctions_junctionexit.py  0003_rename_junctionexit_junction.py  0004_rename_trafficchart_traffic.py  0005_freeway_alternate_names.py  0006_alter_freeway_alternate_names.py
trafficology/horoscope/templates/: base.html  index.html
trafficology/horoscope/templates/freeways/: index.html
trafficology/trafficology/: asgi.py  settings.py  urls.py  wsgi.py
