[tool.poetry]
name = "trafficology"
version = "0.1.0"
description = ""
authors = ["Marlene Barajas <48900002+marlenebarajas@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
psycopg = {extras = ["binary"], version = "^3.1.17"}
numpy = "^1.26.3"
django = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
